--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "PokeApi",
   "version": "1.0.0",
+  "script": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.1",
