--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node app-dev.js",
-	"test" : "mocha tests/"
+    "test": "mocha tests/"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -23,6 +23,7 @@
     "passport-github2": "^0.1.10",
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
+    "socket.io": "^1.7.3",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
