--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "express-session": "^1.15.2",
     "jquery": "^3.2.1",
     "jsdom": "^9.12.0",
+    "jwt-decode": "^2.2.0",
+    "jwt-simple": "^0.5.1",
     "method-override": "^2.3.8",
+    "moment": "^2.18.1",
     "mongoose": "^4.9.2",
     "npm-request": "^1.0.0",
     "passport": "^0.3.2",
